--- a/two_rink_reacher/two_rink_reaching copy 2.ipynb
+++ b/two_rink_reacher/two_rink_reaching copy 2.ipynb
@@ -106,15 +106,25 @@
     "MIN_PROGRESS_PER_WINDOW = 1e-4   # この期間の進捗がこれ未満なら停滞と判定（m）\n",
     "\n",
     "# ===== 学習設定 =====\n",
-    "TOTAL_TIMESTEPS = 3000000  # 学習全体での総ステップ数\n",
-    "LEARNING_RATE = 0.0003     # 学習率\n",
-    "TAU = 0.01                 #SACを使う際のαの学習りつ\n",
-    "HID_LAY = 64               #隠れ層のノード数\n",
+    "TOTAL_TIMESTEPS = 3000000   # 学習全体での総ステップ数\n",
+    "LEARNING_RATE = 0.0003      # 学習率\n",
+    "TAU = 0.01                  #SACを使う際のαの学習りつ\n",
+    "HID_LAY = 64                #隠れ層のノード数\n",
     "BUFFER_SIZE = 100000        # リプレイバッファのサイズ\n",
-    "BATCH_SIZE = 256             # ミニバッチサイズ\n",
+    "BATCH_SIZE = 256            # ミニバッチサイズ\n",
     "EVAL_FREQ = 100             # 何ステップごとに評価するか\n",
     "SAVE_INTERVAL = 1           # 何エピソードごとにモデルを保存するか\n",
-    "RUNNNIG_WINDOW = 10 # 直近何エピソードの平均を計算するか\n"
+    "RUNNNIG_WINDOW = 10         # 直近何エピソードの平均を計算するか\n",
+    "STATES_ARM = 4              #armに関する状態数\n",
+    "SAME_ACTION_TOL = 1e-8                # 同一アクション判定の許容誤差\n",
+    "SUCCESS_WINDOW_SIZE = 100             # sigma_T更新用のウィンドウサイズ\n",
+    "SIGMA_UPDATE_INTERVAL = 10            # sigma_T更新のインターバル\n",
+    "SIGMA_SHARPEN_THRESHOLD = 0.80        # sigmaを小さくする成功率しきい値\n",
+    "SIGMA_BLUNT_THRESHOLD = 0.40          # sigmaを大きくする成功率しきい値\n",
+    "SIGMA_SHARPEN_FACTOR = 0.90           # sigma先鋭化倍率 (<1)\n",
+    "SIGMA_BLUNT_FACTOR = 1.10             # sigma鈍化倍率 (>1)\n",
+    "SIGMA_MIN = 0.2                       # sigmaの下限\n",
+    "SIGMA_MAX_FACTOR = 10.0               # sigmaの上限計算に使う倍率"
    ]
   },
   {
@@ -174,8 +184,8 @@
     "        self.min_progress_per_window = MIN_PROGRESS_PER_WINDOW\n",
     "\n",
     "        # ---------- 観測空間（9次元） ----------\n",
-    "        obs_low = np.array([-1.0]*4 + [0.0], dtype=np.float32)\n",
-    "        obs_high = np.array([1.0]*4 + [1.0], dtype=np.float32)\n",
+    "        obs_low = np.array([-1.0]* STATES_ARM + [0.0], dtype=np.float32)\n",
+    "        obs_high = np.array([1.0]* STATES_ARM + [1.0], dtype=np.float32)\n",
     "        self.observation_space = gym.spaces.Box(low=obs_low, high=obs_high, dtype=np.float32)\n",
     "\n",
     "        # ---------- アクション空間（各関節の角速度 rad/s, shape=(2,)） ----------\n",
@@ -185,39 +195,27 @@
     "            shape=(2,),\n",
     "            dtype=np.float32\n",
     "        )\n",
-    "\n",
     "        # デバッグ用: 各ステップで両関節が同じ角速度になっていないかを確認するためのカウンタ\n",
     "        self._same_action_counter = 0\n",
-    "        self._same_action_tol = 1e-8\n",
+    "        self._same_action_tol = SAME_ACTION_TOL\n",
     "\n",
-    "        # ---------- --- sigma 自動更新に関するハイパラ --- ----------\n",
-    "        # window size: 100 episodes （あなたの指定）\n",
-    "        self._success_window_size = 100\n",
-    "        # deque に成功フラグを入れて管理（1=success, 0=failure）\n",
+    "        # ---------- sigma 自動更新に関するハイパラ ----------\n",
+    "        self._success_window_size = SUCCESS_WINDOW_SIZE\n",
     "        self._success_window = deque(maxlen=self._success_window_size)\n",
-    "        self._success_window_size = 100\n",
     "\n",
     "        # episode counter（reset でエピソード開始時にインクリメントされる想定）\n",
     "        self.episode_count = 0\n",
-    "\n",
-    "        # ここだけ追加：ウィンドウ満杯かつこの interval に達したときだけ更新する\n",
-    "        # 例えば 10 にすれば「100エピソードが溜まった後、10エピソードごとに判定」\n",
-    "        self.sigma_update_interval = 10\n",
+    "        self.sigma_update_interval = SIGMA_UPDATE_INTERVAL\n",
     "        self._sigma_update_counter = 0\n",
     "\n",
-    "        # しきい値: この成功率を超えたら \"先鋭化（sigma を小さく）\" する\n",
-    "        self.sigma_sharpen_threshold = 0.80    # 例: 80% 以上なら先鋭化\n",
-    "        # しきい値: この成功率を下回ったら \"鈍化（sigma を大きく）\" する\n",
-    "        self.sigma_blunt_threshold = 0.40      # 例: 40% 以下なら鈍化\n",
+    "        self.sigma_sharpen_threshold = SIGMA_SHARPEN_THRESHOLD\n",
+    "        self.sigma_blunt_threshold = SIGMA_BLUNT_THRESHOLD\n",
+    "        self.sigma_sharpen_factor = SIGMA_SHARPEN_FACTOR\n",
+    "        self.sigma_blunt_factor = SIGMA_BLUNT_FACTOR\n",
     "\n",
-    "        # 変化率: 先鋭化するときの乗算ファクタ (<1 で sigma が小さくなる)\n",
-    "        self.sigma_sharpen_factor = 0.90       # 例: sigma *= 0.90（10%小さく）\n",
-    "        # 変化率: 鈍化するときの乗算ファクタ (>1 で sigma が大きくなる)\n",
-    "        self.sigma_blunt_factor = 1.10         # 例: sigma *= 1.10（10%大きく）\n",
-    "\n",
-    "        # sigma の上下限（安定化のため）\n",
-    "        self.sigma_min = 0.2\n",
-    "        self.sigma_max = max(1e-3, SIGMA_T * 10.0)\n",
+    "        # sigmaの上下限（安定化のため）\n",
+    "        self.sigma_min = SIGMA_MIN\n",
+    "        self.sigma_max = max(1e-3, SIGMA_T * SIGMA_MAX_FACTOR)\n",
     "\n",
     "        # ログ／デバッグ用に直近更新内容を記録\n",
     "        self._last_sigma_update = {\"episode\": None, \"old_sigma\": None, \"new_sigma\": None, \"success_rate\": None, \"action\": None}\n",
